[metadata]
# replace with your username:
name = dcss-ai-wrapper
version = 0.0.8
author = Dustin Dannenhauer
author_email = dannenhauerdustin@gmail.com
description = API for Dungeon Crawl Stone Soup for Artificial Intelligence research.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dtdannen/dcss-ai-wrapper
project_urls =
    Bug Tracker = https://github.com/dtdannen/dcss-ai-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src